fixed Rernsselaer logo alignment

--- a/www/custom_no_scroll.css
+++ b/www/custom_no_scroll.css
@@ -734,5 +734,15 @@ width: 40px;
     left: 0;
 }
 
+.rensselaer_logo{
+  position: relative;
+    width: 100%;
+    padding-left: 20%;
+    padding-right: 20%;
+    padding-top: 4%;
+    text-align: left;
+    bottom: 0px;
+    left: 0;
+}
 
 
